Implemented the logic for the conversions of strings to business objects

--- a/Transfermarkt.Core/Transfermarkt.Core.csproj
+++ b/Transfermarkt.Core/Transfermarkt.Core.csproj
@@ -52,10 +52,22 @@
     <Compile Include="Actors\Nationality.cs" />
     <Compile Include="Actors\Person.cs" />
     <Compile Include="Actors\Player.cs" />
+    <Compile Include="Actors\Position.cs" />
+    <Compile Include="Actors\Foot.cs" />
     <Compile Include="Connectors\HtmlAgilityPackConnector.cs" />
     <Compile Include="Connectors\Util\AgilityPackUtil.cs" />
     <Compile Include="Contracts\IConnector.cs" />
     <Compile Include="Contracts\IConnection.cs" />
+    <Compile Include="Contracts\IFootConverter.cs" />
+    <Compile Include="Contracts\IPositionConverter.cs" />
+    <Compile Include="Converters\Foot\ENFootConverter.cs" />
+    <Compile Include="Converters\Foot\PTFootConverter.cs" />
+    <Compile Include="Converters\Nationality\ENNationalityConverter.cs" />
+    <Compile Include="Contracts\INationalityConverter.cs" />
+    <Compile Include="Contracts\IConverter.cs" />
+    <Compile Include="Converters\Nationality\PTNationalityConverter.cs" />
+    <Compile Include="Converters\Position\ENPositionConverter.cs" />
+    <Compile Include="Converters\Position\PTPositionConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransfermarktConnection.cs" />
   </ItemGroup>
