Competitions parsing implemented

--- a/Transfermarkt.Console/App.config
+++ b/Transfermarkt.Console/App.config
@@ -4,6 +4,6 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <appSettings>
-    <add key="BaseURL" value="https://www.transfermarkt.pt/" />
+    <add key="BaseURL" value="https://www.transfermarkt.pt" />
   </appSettings>
 </configuration>
