Improved club URL manipulation

--- a/Transfermarkt.Console/App.config
+++ b/Transfermarkt.Console/App.config
@@ -5,5 +5,9 @@
   </startup>
   <appSettings>
     <add key="BaseURL" value="https://www.transfermarkt.pt" />
+    <add key="SimpleClubUrlFormat" value="/{CLUB_STRING}/startseite/verein/{CLUB_ID}/saison_id/{SEASON}" />
+    <add key="PlusClubUrlFormat" value="/{CLUB_STRING}/kader/verein/{CLUB_ID}/saison_id/{SEASON}/plus/1" />
+    <add key="IdentifiersGetterPattern" value="{([a-zA-Z_0-9]*)}" />
+    <add key="IdentifiersSetterPattern" value="(?&lt;{ID}&gt;.*)" />
   </appSettings>
 </configuration>
