--- a/Transfermarkt.Console/App.config
+++ b/Transfermarkt.Console/App.config
@@ -5,5 +5,7 @@
   </startup>
   <appSettings>
     <add key="BaseURL" value="https://www.transfermarkt.pt" />
+    <add key="BaseFolderPath" value="c:\Transfermarkt" />
+    <add key="Level1FolderFormat" value="TM_{0}" />
   </appSettings>
 </configuration>
