--- a/Transfermarkt.Exporter/Transfermarkt.Exporter.csproj
+++ b/Transfermarkt.Exporter/Transfermarkt.Exporter.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BA0BBD16-D971-4936-8697-96DB70BA8E52}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Transfermarkt.Console</RootNamespace>
-    <AssemblyName>Transfermarkt.Console</AssemblyName>
+    <ProjectGuid>{51E667D6-B895-494F-95DA-EB080DD8EEBB}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Transfermarkt.Exporter</RootNamespace>
+    <AssemblyName>Transfermarkt.Exporter</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -44,20 +45,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="JSONExporter\JsonExporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Transfermarkt.Core\Transfermarkt.Core.csproj">
-      <Project>{624d334a-662c-4b28-bb3f-c73e61850c93}</Project>
+      <Project>{624D334A-662C-4B28-BB3F-C73E61850C93}</Project>
       <Name>Transfermarkt.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Transfermarkt.Exporter\Transfermarkt.Exporter.csproj">
-      <Project>{51E667D6-B895-494F-95DA-EB080DD8EEBB}</Project>
-      <Name>Transfermarkt.Exporter</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
