--- a/Transfermarkt.Core/Transfermarkt.Core.csproj
+++ b/Transfermarkt.Core/Transfermarkt.Core.csproj
@@ -73,7 +73,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Parser.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Transfermarkt.Logging\Transfermarkt.Logging.csproj">
+      <Project>{3166B876-1387-4469-9B20-7BE12BCD105E}</Project>
+      <Name>Transfermarkt.Logging</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
