Changed the way the parsing of the urls is done in Program.cs

--- a/Transfermarkt.Console/App.config
+++ b/Transfermarkt.Console/App.config
@@ -9,6 +9,8 @@
     <add key="Level1FolderFormat" value="TM_{0}" />
     <add key="SimpleClubUrlFormat" value="/{CLUB_STRING}/startseite/verein/{CLUB_ID}/saison_id/{SEASON}" />
     <add key="PlusClubUrlFormat" value="/{CLUB_STRING}/kader/verein/{CLUB_ID}/saison_id/{SEASON}/plus/1" />
+    <add key="PlusClubUrlFormatV2" value="/{CLUB_STRING}/kader/verein/{CLUB_ID}/plus/1/galerie/0?saison_id={SEASON}" />
+    <add key="CompetitionUrlFormat" value="/{COMPETITION_NAME}/startseite/wettbewerb/{DIVISION}/plus/?saison_id={SEASON}" />
     <add key="IdentifiersGetterPattern" value="{([a-zA-Z_0-9]*)}" />
     <add key="IdentifiersSetterPattern" value="(?&lt;{ID}&gt;.*)" />
   </appSettings>
