Refactored Position Converter.

--- a/Transfermarkt.Core.Test/App.config
+++ b/Transfermarkt.Core.Test/App.config
@@ -3,10 +3,10 @@
   <appSettings>
     <add key="BaseURL" value="https://www.transfermarkt.pt" />
     <add key="BaseFolderPath" value="c:\Transfermarkt" />
-    <add key="SettingsPTFolderPath" value="c:\Transfermarkt\settings\PT" />
-    <add key="SettingsPTPositionsFile" value="positionsPT.json" />
-    <add key="SettingsPTNationalitiesFile" value="nationalitiesPT.json" />
-    <add key="SettingsPTFootFile" value="footPT.json" />
+    <add key="SettingsFolderPath" value="c:\Transfermarkt\settings" />
+    <add key="SettingsPositionsFile" value="positions.json" />
+    <add key="SettingsNationalitiesFile" value="nationalities.json" />
+    <add key="SettingsFootFile" value="foot.json" />
     <add key="Level1FolderFormat" value="TM_{0}" />
     <add key="SimpleClubUrlFormat" value="/{CLUB_STRING}/startseite/verein/{CLUB_ID}/saison_id/{SEASON}" />
     <add key="PlusClubUrlFormat" value="/{CLUB_STRING}/kader/verein/{CLUB_ID}/saison_id/{SEASON}/plus/1" />
