--- a/Transfermarkt.Core.Test/App.config
+++ b/Transfermarkt.Core.Test/App.config
@@ -5,7 +5,7 @@
     <add key="BaseFolderPath" value="c:\Transfermarkt" />
     <add key="SettingsFolderPath" value="c:\Transfermarkt\settings" />
     <add key="SettingsPositionsFile" value="positions.json" />
-    <add key="SettingsNationalitiesFile" value="nationalities.json" />
+    <add key="SettingsNationalityFile" value="nationality.json" />
     <add key="SettingsFootFile" value="foot.json" />
     <add key="Level1FolderFormat" value="TM_{0}" />
     <add key="SimpleClubUrlFormat" value="/{CLUB_STRING}/startseite/verein/{CLUB_ID}/saison_id/{SEASON}" />
