--- a/Transfermarkt.Core.Test/Transfermarkt.Core.Test.csproj
+++ b/Transfermarkt.Core.Test/Transfermarkt.Core.Test.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Converters\Foot\FootConverterTest.cs" />
     <Compile Include="Converters\Nationality\NationalityConverterTest.cs" />
     <Compile Include="Converters\Position\PositionConverterTest.cs" />
+    <Compile Include="Pages\PageTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -67,6 +68,9 @@
       <Project>{624D334A-662C-4B28-BB3F-C73E61850C93}</Project>
       <Name>Transfermarkt.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Parsers\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
