--- a/Transfermarkt.Core/Transfermarkt.Core.csproj
+++ b/Transfermarkt.Core/Transfermarkt.Core.csproj
@@ -61,11 +61,13 @@
     <Compile Include="Connectors\HtmlAgilityPackConnector.cs" />
     <Compile Include="Contracts\IElementParser.cs" />
     <Compile Include="Contracts\IMarketValueParser.cs" />
+    <Compile Include="Contracts\INationalityParser.cs" />
     <Compile Include="Contracts\IPage.cs" />
     <Compile Include="Contracts\IPageConnector.cs" />
     <Compile Include="Contracts\IParser.cs" />
     <Compile Include="Contracts\Converters\IFootConverter.cs" />
     <Compile Include="Contracts\Converters\IPositionConverter.cs" />
+    <Compile Include="Contracts\IClubPage.cs" />
     <Compile Include="Converters\ConvertersCollection.cs" />
     <Compile Include="Converters\Foot\ENFootConverter.cs" />
     <Compile Include="Converters\Foot\PTFootConverter.cs" />
@@ -77,8 +79,12 @@
     <Compile Include="Converters\Position\PositionConverter.cs" />
     <Compile Include="Converters\Position\PTPositionConverter.cs" />
     <Compile Include="Exporter\IExporter.cs" />
-    <Compile Include="Pages\PlayerPage.cs" />
-    <Compile Include="Parsers\Player\MarketValueParser.cs" />
+    <Compile Include="Pages\IHAPClubPage.cs" />
+    <Compile Include="Pages\ClubPage.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\IHAPMarketValueParser.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\IHAPNationalityParser.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\Player\MarketValueParser.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\Player\NationalityParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Parser.cs" />
   </ItemGroup>
@@ -92,7 +98,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Parsers\Competition\" />
+    <Folder Include="Parsers\HtmlAgilityPack\Competition\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
