--- a/Transfermarkt.Core/Transfermarkt.Core.csproj
+++ b/Transfermarkt.Core/Transfermarkt.Core.csproj
@@ -68,9 +68,12 @@
     <Compile Include="Contracts\Converters\IFootConverter.cs" />
     <Compile Include="Contracts\Converters\IPositionConverter.cs" />
     <Compile Include="Contracts\IClubPage.cs" />
+    <Compile Include="Converters\DateConverter.cs" />
+    <Compile Include="Converters\StringConverter.cs" />
     <Compile Include="Converters\ConvertersCollection.cs" />
     <Compile Include="Converters\Foot\ENFootConverter.cs" />
     <Compile Include="Converters\Foot\PTFootConverter.cs" />
+    <Compile Include="Converters\DecimalConverter.cs" />
     <Compile Include="Converters\Nationality\ENNationalityConverter.cs" />
     <Compile Include="Contracts\Converters\INationalityConverter.cs" />
     <Compile Include="Contracts\IConverter.cs" />
@@ -78,13 +81,25 @@
     <Compile Include="Converters\Position\ENPositionConverter.cs" />
     <Compile Include="Converters\Position\PositionConverter.cs" />
     <Compile Include="Converters\Position\PTPositionConverter.cs" />
+    <Compile Include="Converters\IntConverter.cs" />
     <Compile Include="Exporter\IExporter.cs" />
     <Compile Include="Pages\IHAPClubPage.cs" />
     <Compile Include="Pages\ClubPage.cs" />
-    <Compile Include="Parsers\HtmlAgilityPack\IHAPMarketValueParser.cs" />
-    <Compile Include="Parsers\HtmlAgilityPack\IHAPNationalityParser.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\Player\BirthDateParser.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\Player\CaptainParser.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\Player\ClubArrivalDateParser.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\Player\ContractExpirationDateParser.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\Player\ElementParser.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\Player\HeightParser.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\Player\ImgUrlParser.cs" />
     <Compile Include="Parsers\HtmlAgilityPack\Player\MarketValueParser.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\Player\NameParser.cs" />
     <Compile Include="Parsers\HtmlAgilityPack\Player\NationalityParser.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\Player\PositionParser.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\Player\PreferredFootParser.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\Player\ProfileUrlParser.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\Player\ShirtNumberParser.cs" />
+    <Compile Include="Parsers\HtmlAgilityPack\Player\ShortNameParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Parser.cs" />
   </ItemGroup>
