--- a/Transfermarkt.Core/Transfermarkt.Core.csproj
+++ b/Transfermarkt.Core/Transfermarkt.Core.csproj
@@ -61,8 +61,8 @@
     <Compile Include="Contracts\ICompetitionPage.cs" />
     <Compile Include="Contracts\IContinentPage.cs" />
     <Compile Include="Contracts\IElementParser.cs" />
-    <Compile Include="Contracts\IMarketValueParser.cs" />
-    <Compile Include="Contracts\INationalityParser.cs" />
+    <Compile Include="Contracts\Parsers\IMarketValueParser.cs" />
+    <Compile Include="Contracts\Parsers\INationalityParser.cs" />
     <Compile Include="Contracts\IPage.cs" />
     <Compile Include="Contracts\Converters\IFootConverter.cs" />
     <Compile Include="Contracts\Converters\IPositionConverter.cs" />
