Deleted Converters implementations by language and substituted by a single implementation that checks .config for a language.

--- a/Transfermarkt.Core.Test/Transfermarkt.Core.Test.csproj
+++ b/Transfermarkt.Core.Test/Transfermarkt.Core.Test.csproj
@@ -53,9 +53,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Converters\Foot\FootConverterTest.cs" />
-    <Compile Include="Converters\Nationality\NationalityConverterTest.cs" />
-    <Compile Include="Converters\Position\PositionConverterTest.cs" />
+    <Compile Include="Converters\FootConverterTest.cs" />
+    <Compile Include="Converters\NationalityConverterTest.cs" />
+    <Compile Include="Converters\PositionConverterTest.cs" />
     <Compile Include="Pages\PageTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
