--- a/Transfermarkt.Core/Transfermarkt.Core.csproj
+++ b/Transfermarkt.Core/Transfermarkt.Core.csproj
@@ -69,17 +69,13 @@
     <Compile Include="Contracts\Converters\IPositionConverter.cs" />
     <Compile Include="Contracts\IClubPage.cs" />
     <Compile Include="Converters\DateConverter.cs" />
+    <Compile Include="Converters\FootConverter.cs" />
+    <Compile Include="Converters\NationalityConverter.cs" />
+    <Compile Include="Converters\PositionConverter.cs" />
     <Compile Include="Converters\StringConverter.cs" />
-    <Compile Include="Converters\Foot\ENFootConverter.cs" />
-    <Compile Include="Converters\Foot\PTFootConverter.cs" />
     <Compile Include="Converters\DecimalConverter.cs" />
-    <Compile Include="Converters\Nationality\ENNationalityConverter.cs" />
     <Compile Include="Contracts\Converters\INationalityConverter.cs" />
     <Compile Include="Contracts\IConverter.cs" />
-    <Compile Include="Converters\Nationality\PTNationalityConverter.cs" />
-    <Compile Include="Converters\Position\ENPositionConverter.cs" />
-    <Compile Include="Converters\Position\PositionConverter.cs" />
-    <Compile Include="Converters\Position\PTPositionConverter.cs" />
     <Compile Include="Converters\IntConverter.cs" />
     <Compile Include="Exporter\IExporter.cs" />
     <Compile Include="Pages\CompetitionPage.cs" />
