--- a/Transfermarkt.Console/App.config
+++ b/Transfermarkt.Console/App.config
@@ -4,10 +4,11 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <appSettings>
+    <add key="Language" value="pt" />
     <add key="BaseURL" value="https://www.transfermarkt.pt" />
     <add key="BaseFolderPath" value="c:\Transfermarkt" />
     <add key="SettingsFolderPath" value="c:\Transfermarkt\settings" />
-    <add key="SettingsPositionsFile" value="positions.json" />
+    <add key="SettingsPositionFile" value="position.json" />
     <add key="SettingsNationalityFile" value="nationality.json" />
     <add key="SettingsFootFile" value="foot.json" />
     <add key="Level1FolderFormat" value="TM_{0}" />
