--- a/Transfermarkt.Core.Test/App.config
+++ b/Transfermarkt.Core.Test/App.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
+    <add key="Language" value="pt" />
     <add key="BaseURL" value="https://www.transfermarkt.pt" />
     <add key="BaseFolderPath" value="c:\Transfermarkt" />
     <add key="SettingsFolderPath" value="c:\Transfermarkt\settings" />
-    <add key="SettingsPositionsFile" value="positions.json" />
+    <add key="SettingsPositionFile" value="position.json" />
     <add key="SettingsNationalityFile" value="nationality.json" />
     <add key="SettingsFootFile" value="foot.json" />
     <add key="Level1FolderFormat" value="TM_{0}" />
