--- a/Transfermarkt.Core/Transfermarkt.Core.csproj
+++ b/Transfermarkt.Core/Transfermarkt.Core.csproj
@@ -58,7 +58,9 @@
     <Compile Include="Actors\Player.cs" />
     <Compile Include="Actors\Position.cs" />
     <Compile Include="Actors\Foot.cs" />
+    <Compile Include="ConfigManager.cs" />
     <Compile Include="Contracts\ICompetitionPage.cs" />
+    <Compile Include="Contracts\IConfigurationManager.cs" />
     <Compile Include="Contracts\IContinentPage.cs" />
     <Compile Include="Contracts\IDomain.cs" />
     <Compile Include="Contracts\IElementParser.cs" />
