Elements namespace changed to Parsers.

--- a/Transfermarkt.Core/Transfermarkt.Core.csproj
+++ b/Transfermarkt.Core/Transfermarkt.Core.csproj
@@ -84,32 +84,32 @@
     <Compile Include="ParseHandling\Pages\CompetitionPage.cs" />
     <Compile Include="ParseHandling\Pages\ContinentPage.cs" />
     <Compile Include="ParseHandling\Pages\ClubPage.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Club\CountryImgParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Club\CountryParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Club\ImgUrlParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Club\NameParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Club\SeasonParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Competition\CountryImgParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Competition\CountryParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Competition\ImgUrlParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Competition\NameParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Competition\SeasonParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Continent\ContinentCodeParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Continent\NameParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Player\BirthDateParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Player\CaptainParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Player\ClubArrivalDateParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Player\ContractExpirationDateParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Player\HeightParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Player\PlayerImgUrlParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Player\MarketValueParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Player\PlayerNameParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Player\NationalityParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Player\PositionParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Player\PreferredFootParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Player\ProfileUrlParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Player\ShirtNumberParser.cs" />
-    <Compile Include="ParseHandling\Elements\HtmlAgilityPack\Player\ShortNameParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Club\CountryImgParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Club\CountryParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Club\ImgUrlParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Club\NameParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Club\SeasonParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Competition\CountryImgParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Competition\CountryParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Competition\ImgUrlParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Competition\NameParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Competition\SeasonParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Continent\ContinentCodeParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Continent\NameParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Player\BirthDateParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Player\CaptainParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Player\ClubArrivalDateParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Player\ContractExpirationDateParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Player\HeightParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Player\PlayerImgUrlParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Player\MarketValueParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Player\PlayerNameParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Player\NationalityParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Player\PositionParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Player\PreferredFootParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Player\ProfileUrlParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Player\ShirtNumberParser.cs" />
+    <Compile Include="ParseHandling\Parsers\HtmlAgilityPack\Player\ShortNameParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
