--- a/Transfermarkt.Core/Transfermarkt.Core.csproj
+++ b/Transfermarkt.Core/Transfermarkt.Core.csproj
@@ -51,6 +51,9 @@
     <Compile Include="Actors\Club.cs" />
     <Compile Include="ParseHandling\Contracts\Element.cs" />
     <Compile Include="ParseHandling\ElementParser.cs" />
+    <Compile Include="ParseHandling\Elements\Club\ClubElements.cs" />
+    <Compile Include="ParseHandling\Elements\Competition\CompetitionElements.cs" />
+    <Compile Include="ParseHandling\Elements\Continent\ContinentElements.cs" />
     <Compile Include="ParseHandling\Elements\Player\MarketValue.cs" />
     <Compile Include="ParseHandling\Elements\Player\Height.cs" />
     <Compile Include="Actors\Competition.cs" />
@@ -124,9 +127,6 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ParseHandling\Elements\Competition\" />
-    <Folder Include="ParseHandling\Elements\Continent\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
