--- a/Transfermarkt.Core/Transfermarkt.Core.csproj
+++ b/Transfermarkt.Core/Transfermarkt.Core.csproj
@@ -51,8 +51,8 @@
     <Compile Include="Actors\Club.cs" />
     <Compile Include="ParseHandling\Contracts\Element.cs" />
     <Compile Include="ParseHandling\Contracts\ISection.cs" />
-    <Compile Include="ParseHandling\ElementParser.cs" />
     <Compile Include="ParseHandling\Contracts\Domain.cs" />
+    <Compile Include="ParseHandling\Contracts\ElementParser.cs" />
     <Compile Include="ParseHandling\Elements\Club\ClubElements.cs" />
     <Compile Include="ParseHandling\Elements\Competition\CompetitionElements.cs" />
     <Compile Include="ParseHandling\Elements\Continent\ContinentElements.cs" />
