--- a/Transfermarkt.Core.Test/App.config
+++ b/Transfermarkt.Core.Test/App.config
@@ -4,7 +4,7 @@
     <add key="Language" value="pt" />
     <add key="BaseURL" value="https://www.transfermarkt.pt" />
     <add key="BaseFolderPath" value="c:\Transfermarkt" />
-    <add key="SettingsFolderPath" value="c:\Transfermarkt\settings" />
+    <add key="SettingsFolderPath" value="c:\Transfermarkt\Settings" />
     <add key="SettingsPositionFile" value="position.json" />
     <add key="SettingsNationalityFile" value="nationality.json" />
     <add key="SettingsFootFile" value="foot.json" />
@@ -15,5 +15,7 @@
     <add key="CompetitionUrlFormat" value="/{COMPETITION_NAME}/startseite/wettbewerb/{DIVISION}/plus/?saison_id={SEASON}" />
     <add key="IdentifiersGetterPattern" value="{([a-zA-Z_0-9]*)}" />
     <add key="IdentifiersSetterPattern" value="(?&lt;{ID}&gt;.*)" />
+    <add key="LogPath" value="c:\Transfermarkt\Logs" />
+    <add key="MinimumLoggingLevel" value="2" />
   </appSettings>
 </configuration>
