Converters domain specific contracts moved to different zone of the project.

--- a/Transfermarkt.Core/Transfermarkt.Core.csproj
+++ b/Transfermarkt.Core/Transfermarkt.Core.csproj
@@ -76,15 +76,15 @@
     <Compile Include="ParseHandling\Contracts\IDomain.cs" />
     <Compile Include="ParseHandling\Contracts\IElementParser.cs" />
     <Compile Include="ParseHandling\Contracts\IPage.cs" />
-    <Compile Include="ParseHandling\Contracts\Converter\IFootConverter.cs" />
-    <Compile Include="ParseHandling\Contracts\Converter\IPositionConverter.cs" />
+    <Compile Include="ParseHandling\Converters\IFootConverter.cs" />
+    <Compile Include="ParseHandling\Converters\IPositionConverter.cs" />
     <Compile Include="ParseHandling\Converters\DateConverter.cs" />
     <Compile Include="ParseHandling\Converters\FootConverter.cs" />
     <Compile Include="ParseHandling\Converters\NationalityConverter.cs" />
     <Compile Include="ParseHandling\Converters\PositionConverter.cs" />
     <Compile Include="ParseHandling\Converters\StringConverter.cs" />
     <Compile Include="ParseHandling\Converters\DecimalConverter.cs" />
-    <Compile Include="ParseHandling\Contracts\Converter\INationalityConverter.cs" />
+    <Compile Include="ParseHandling\Converters\INationalityConverter.cs" />
     <Compile Include="ParseHandling\Contracts\IConverter.cs" />
     <Compile Include="ParseHandling\Converters\IntConverter.cs" />
     <Compile Include="Exporter\IExporter.cs" />
