--- a/Transfermarkt.Core.Test/Transfermarkt.Core.Test.csproj
+++ b/Transfermarkt.Core.Test/Transfermarkt.Core.Test.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Pages\PageTest.cs" />
     <Compile Include="Parsers\ParserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestingConfigs.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
