Created Performance unit test.

--- a/Transfermarkt.Core.Test/Transfermarkt.Core.Test.csproj
+++ b/Transfermarkt.Core.Test/Transfermarkt.Core.Test.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Converters\FootConverterTest.cs" />
     <Compile Include="Converters\NationalityConverterTest.cs" />
     <Compile Include="Converters\PositionConverterTest.cs" />
+    <Compile Include="Pages\PagePerformanceTest.cs" />
     <Compile Include="Pages\PageTest.cs" />
     <Compile Include="Parsers\ParserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
