--- a/Transfermarkt.Core.Test/Transfermarkt.Core.Test.csproj
+++ b/Transfermarkt.Core.Test/Transfermarkt.Core.Test.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Pages\PageTest.cs" />
     <Compile Include="Parsers\ParserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SettingsTest.cs" />
     <Compile Include="TestingConfigs.cs" />
   </ItemGroup>
   <ItemGroup>
