Config entry for continent codes created.

--- a/Transfermarkt.Core.Test/App.config
+++ b/Transfermarkt.Core.Test/App.config
@@ -8,6 +8,7 @@
     <add key="SettingsPositionFile" value="position.json" />
     <add key="SettingsNationalityFile" value="nationality.json" />
     <add key="SettingsFootFile" value="foot.json" />
+    <add key="SettingsContinentFile" value="continent.json" />
     <add key="Level1FolderFormat" value="TM_{0}" />
     <add key="SimpleClubUrlFormat" value="/{CLUB_STRING}/startseite/verein/{CLUB_ID}/saison_id/{SEASON}" />
     <add key="PlusClubUrlFormat" value="/{CLUB_STRING}/kader/verein/{CLUB_ID}/saison_id/{SEASON}/plus/1" />
