--- a/Transfermarkt.Console/App.config
+++ b/Transfermarkt.Console/App.config
@@ -6,8 +6,8 @@
   <appSettings>
     <add key="Language" value="pt" />
     <add key="BaseURL" value="https://www.transfermarkt.pt" />
-    <add key="BaseFolderPath" value="c:\Transfermarkt" />
-    <add key="SettingsFolderPath" value="c:\Transfermarkt\Settings" />
+    <add key="BaseFolderPath" value="C:\Transfermarkt" />
+    <add key="SettingsFolderPath" value="C:\ws\Transfermarkt\Settings" />
     <add key="SettingsPositionFile" value="position.json" />
     <add key="SettingsNationalityFile" value="nationality.json" />
     <add key="SettingsFootFile" value="foot.json" />
