JSON file name pattern now comes from config files.

--- a/Transfermarkt.Core.Test/App.config
+++ b/Transfermarkt.Core.Test/App.config
@@ -10,6 +10,9 @@
     <add key="SettingsFootFile" value="foot.json" />
     <add key="SettingsContinentFile" value="continent.json" />
     <add key="Level1FolderFormat" value="TM_{0}" />
+    <add key="ContinentFileNameFormat" value="{CODE}-{NAME}" />
+    <add key="CompetitionFileNameFormat" value="{COUNTRY}-{NAME}_{Y}" />
+    <add key="ClubFileNameFormat" value="{COUNTRY}-{NAME}_{Y}" />
     <add key="SimpleClubUrlFormat" value="/{CLUB_STRING}/startseite/verein/{CLUB_ID}/saison_id/{SEASON}" />
     <add key="PlusClubUrlFormat" value="/{CLUB_STRING}/kader/verein/{CLUB_ID}/saison_id/{SEASON}/plus/1" />
     <add key="PlusClubUrlFormatV2" value="/{CLUB_STRING}/kader/verein/{CLUB_ID}/plus/1/galerie/0?saison_id={SEASON}" />
