--- a/Transfermarkt.Console/Transfermarkt.Console.csproj
+++ b/Transfermarkt.Console/Transfermarkt.Console.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack, Version=1.11.18.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack.1.11.18\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -49,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Transfermarkt.Core\Transfermarkt.Core.csproj">
@@ -58,6 +62,10 @@
     <ProjectReference Include="..\Transfermarkt.Exporter\Transfermarkt.Exporter.csproj">
       <Project>{51E667D6-B895-494F-95DA-EB080DD8EEBB}</Project>
       <Name>Transfermarkt.Exporter</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Transfermarkt.Logging\Transfermarkt.Logging.csproj">
+      <Project>{3166B876-1387-4469-9B20-7BE12BCD105E}</Project>
+      <Name>Transfermarkt.Logging</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
