Introduced the Link notion.

--- a/Transfermarkt.Core/Transfermarkt.Core.csproj
+++ b/Transfermarkt.Core/Transfermarkt.Core.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ParseHandling\Contracts\Domain.cs" />
     <Compile Include="ParseHandling\Contracts\ElementParser.cs" />
     <Compile Include="ParseHandling\Contracts\IValue.cs" />
+    <Compile Include="ParseHandling\Contracts\Link.cs" />
     <Compile Include="ParseHandling\Contracts\Page.cs" />
     <Compile Include="ParseHandling\Contracts\Section.cs" />
     <Compile Include="ParseHandling\Converters\ContinentCodeConverter.cs" />
