Season Parser was not working correctly, both on Competition and Club levels.

--- a/Transfermarkt.Console/App.config
+++ b/Transfermarkt.Console/App.config
@@ -14,7 +14,7 @@
     <add key="SettingsContinentFile" value="continent.json" />
     <add key="Level1FolderFormat" value="TM_{0}" />
     <add key="ContinentFileNameFormat" value="{CODE}-{NAME}" />
-    <add key="CompetitionFileNameFormat" value="{COUNTRY}-{NAME}_{Y}" />
+    <add key="CompetitionFileNameFormat" value="{COUNTRY}-{Y}_{NAME}" />
     <add key="ClubFileNameFormat" value="{COUNTRY}-{NAME}_{Y}" />
     <add key="SimpleClubUrlFormat" value="/{CLUB_STRING}/startseite/verein/{CLUB_ID}/saison_id/{SEASON}" />
     <add key="PlusClubUrlFormat" value="/{CLUB_STRING}/kader/verein/{CLUB_ID}/saison_id/{SEASON}/plus/1" />
